--- a/Clients/Phonebook.Web/wwwroot/index.html
+++ b/Clients/Phonebook.Web/wwwroot/index.html
@@ -43,7 +43,7 @@
         <ul id="report-list" class="list-container"></ul>
     </section>
 
-
+    <script src="/config.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
